# ir-pico

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  treefmt.nix
.cargo/: config.toml
.github/workflows/: ci_checks.yml
mylib/src/: lib.rs
py/: README.rst  irtoy.py  pyproject.toml  setup.py
py/tests/: test_irtoy.py
src/: main.rs
