[project]
name = "pyirtoy"
dynamic = ["version"]
description = "Python module for transmitting and receiving infrared signals from an IR Toy (firmware rev. 22 or higher)"
license = {text = "Creative Commons Attribution ShareAlike license v3.0"}
authors = [{name = "Chris LeBlanc", email = "crleblanc@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff", "pytest"]
